--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   "dependencies": {
     "cloudinary": "^1.35.0",
     "express": "^4.18.2",
-    "express-fileupload": "^1.4.0"
+    "express-fileupload": "^1.4.0",
+    "netlify-plugin-cloudinary": "^1.2.0"
   },
-  "devDependencies": {},
   "description": ""
 }
